# desafio-nlp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  build.sh  config.py  docker-compose.yml  download_pdfs.py  indexar_metadados.py  main.ipynb  main.py  model_dados.py  models.py  populate_db.py  pyproject.toml  qdrant_service.py  resultado_links.txt  teste_busca.py  utils.py
backend/: Dockerfile  Dockerfile.dockerignore  agent_service.py  analise_links.py  config.py  indexar_metadados.py  main.py  models.py  pyproject.toml
backend/agent/: service.py  tools.py
backend/pipeline/: busca.py  ingestor.py  metadata_service.py  orchestrator.py
backend/pipeline/parsers/: docling_parser.py
backend/scripts/: check_missing_links.py  diagnostico.py  download_others.py  download_pdfs.py  indexar_metadados.py  inspecionar_retrieval.py  parse_pdfs.py  sync_registros.py  teste_busca.py  teste_sanidade.py  teste_vetorial.py  upload_to_gcs.py  verificar_modelo.py
backend/scripts/parsers/: pymupdf_parser.py
backend/services/: gcs.py  qdrant.py
backend/tests/: test_api.py  test_imports.py
data/: download_pdfs.py  main.ipynb  main.py  populate_db.py
frontend/: Dockerfile  Dockerfile.dockerignore  app.py  pyproject.toml
pipeline/: base.py
pipeline/fetchers/: gcs_fetcher.py  local_fetcher.py  url_fetcher.py
pipeline/parsers/: pdf_parser.py
