[project]
name = "desafio-rag-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "python-dotenv>=1.2.2",
    "fastapi>=0.135.3",
    "google-cloud-storage>=3.10.1",
    "llama-index>=0.14.20",
    "llama-index-embeddings-openai>=0.6.0",
    "llama-index-llms-openai>=0.7.5",
    "llama-index-readers-file>=0.6.0",
    "llama-index-vector-stores-qdrant>=0.10.0",
    "openai>=2.32.0",
    "pydantic>=2.13.0",
    "qdrant-client>=1.17.1",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "docling>=2.91.0",
    "httpx>=0.28.1",
    "pymupdf>=1.27.2.3",
    "pymupdf4llm>=1.27.2.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.3",
]
